# CollaborativePad_ClientServerSystem

./: .gitignore  README.md  copyClient2.bat
Client/: AccountView.cpp  AccountView.h  AddUserWidget.cpp  AddUserWidget.h  CMakeLists.txt  CursorColors.h  CursorNames.h  CustomStyle.cpp  CustomStyle.h  EditorGUI.cpp  EditorGUI.h  FileSystemGridView.cpp  FileSystemGridView.h  FileSystemGridView.ui  FileSystemTreeView.cpp  FileSystemTreeView.h  InfoUsersListWidget.cpp  InfoUsersListWidget.h  InfoWidget.cpp  InfoWidget.h  InfoWidgetEdit.cpp  InfoWidgetEdit.h  InviteUserWidget.cpp  InviteUserWidget.h  InviteUserWidgetItem.cpp  InviteUserWidgetItem.h  LoginDialog.cpp  LoginDialog.h  LostConnectionWidget.cpp  LostConnectionWidget.h  MainWindow.cpp  MainWindow.h  Message.cpp  Message.h  MyTextEdit.cpp  MyTextEdit.h  RemoteCursor.cpp  RemoteCursor.h  SharedEditor.cpp  SharedEditor.h  (+27 more)
Client/Esempio/: textedit.cpp  textedit.h
Client/Packet/: Command.cpp  Command.h  CursorPosition.cpp  CursorPosition.h  DataPacket.cpp  DataPacket.h  ErrorPacket.h  FileInfo.cpp  FileInfo.h  LoginInfo.cpp  LoginInfo.h  Message.h  Payload.cpp  StringMessages.cpp  StringMessages.h  UserInfo.cpp  UserInfo.h
Client/Packet/Symbols/: SymId.cpp  SymId.h  Symbol.h
SharedEditorServer/: CMakeLists.txt  Files.cpp  Files.h  Message.cpp  Message.h  MessageHandler.cpp  MessageHandler.h  NetworkServer.cpp  NetworkServer.h  ServerThread.cpp  ServerThread.h  Socket.h  SocketsPool.cpp  SocketsPool.h  SymId.cpp  Symbol.h  jsoncpp.cpp  main.cpp
SharedEditorServer/MyExceptions/: CommandException.h  LoginException.h  RenCommandException.h
SharedEditorServer/Packet/: Command.cpp  Command.h  CursorPosition.cpp  CursorPosition.h  DataPacket.cpp  DataPacket.h  ErrorPacket.cpp  ErrorPacket.h  FileInfo.h  LoginInfo.cpp  LoginInfo.h  Message.cpp  Message.h  Payload.h  StringMessages.cpp  StringMessages.h  UserInfo.cpp  UserInfo.h
SharedEditorServer/Packet/Symbols/: SymId.h  Symbol.cpp  Symbol.h
SharedEditorServer/database/: DBSql.cpp  DBSql.h  shell.c
SharedEditorServer/json/: json-forwards.h  json.h
